# SSE-Backend

./: .gitignore  README.md
backend/: Makefile  events.py  main.py  pyproject.toml
