[tool.poetry]
name = "sse-backend"
version = "0.1.0"
description = "Configurando o SSE no backend co FastAPI"
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
sse-starlette = "^2.1.3"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
